# OrionTel

./: README.md  Requirements.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  API.md  Cargo.toml  Dockerfile  README.md
backend/database/: schema.sql
backend/migrations/: 20240320000000_create_calendar_tables.sql
backend/src/: error.rs  main.rs
backend/src/api/: auth.rs  calendar.rs  email.rs  mod.rs  pbx.rs  system.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  calendar.rs  email.rs  pbx.rs  system.rs
backend/src/services/: auth.rs  calendar.rs  email.rs  pbx.rs  system.rs
backend/tests/: calendar_test.rs
backend/tests/api/: email.rs
backend/tests/helpers/: app.rs  auth.rs  email.rs  mod.rs
beckend/: Cargo.toml  Dockerfile
beckend/src/: main.rs
frontend/: next.config.mjs  package-lock.json  package.json
frontend/components/: CallSystem.tsx
frontend/pages/: index.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/addons/: page.tsx
frontend/src/app/advanced-settings/: page.tsx
frontend/src/app/agenda/: page.tsx
frontend/src/app/asterisk-file-editor/: page.tsx
frontend/src/app/backup-restore/: page.tsx
frontend/src/app/bookmarks/: page.tsx
frontend/src/app/call-map/: page.tsx
frontend/src/app/call-reports/: page.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/email/: page.tsx
frontend/src/app/fax/: page.tsx
frontend/src/app/firewall-rules/: page.tsx
frontend/src/app/hardware-detector/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/im/: page.tsx
frontend/src/app/language/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/monitoring/: page.tsx
(+17 files in other folders)
