[package]
name = "oriontel_beckend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1.0", features = [
    "derive",
] } # Serialization/deserialization
serde_json = "1.0" # JSON handling
reqwest = { version = "0.12.12", features = ["blocking", "json"] } # HTTP client
log = "0.4" # 0.11.6ging
env_logger = "0.11.6" # Logger implementation0.11.6
chrono = "0.4"


[profile.dev]
opt-level = 0   
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
